crates/ill-core/src/snapshots/ill_core__render__tests__snapshot_zero_length_span_widens.snap
---
source: crates/ill-core/src/render.rs
assertion_line: 106
expression: "render_to_string(\"demo.ill\", source, &[diag])"
---
error[E0002]: missing `=` here
  ┌─ demo.ill:1:6
  │
1 │ actor a = container
  │      ^
